--- a/src/main/resources/templates/pages/registration.html
+++ b/src/main/resources/templates/pages/registration.html
@@ -4,7 +4,7 @@
 <body>
 <div class="container-fluid min-vh-100" id="page">
     <div class="row header-default" id="header">
-        <header th:replace="fragments/header :: header-default"></header>
+        <header th:replace="fragments/header :: header-home"></header>
     </div>
     <div class="row mb-5" id="main-content">
         <main class="min-vw-100" role="main">
