--- a/src/main/resources/templates/pages/employee-dashboard-legal.html
+++ b/src/main/resources/templates/pages/employee-dashboard-legal.html
@@ -9,7 +9,6 @@
         right:0;
         margin-right:-1000px;
     }
-
 </style>
 
 <div class="container-fluid min-vh-100" id="page">
@@ -24,6 +23,7 @@
                     <h1>Welkom, <span th:text="${employee.firstName}"></span>  |  <span th:text="${employee.getEmployeeRole().getLabel()}"></span></h1>
                 </div>
             </div>
+
             <div class="container pt-5">
                 <div class="row">
                     <div class="col-md-12">
@@ -73,17 +73,22 @@
                             <tr>
                                 <th>Klant</th>
                                 <th>Aantal transacties</th>
+                                <th>Info</th>
                             </tr>
                             </thead>
                             <tbody>
                             <tr th:each="m : ${mostActiveClients}">
                                 <td th:text="${m.companyName}"></td>
                                 <td th:text="${m.numberOfTransactions}"></td>
+                                <td> <button type="button" class="btn btn-outline-primary" data-toggle="modal" data-target=".bd-example-modal-lg"
+                                             th:onclick="showMoreInfo([[${m.kvkNumber}]],[[${m.address}]],[[${m.accountmanager}]])">Meer info</button>
+                                </td>
                             </tr>
                             </tbody>
                         </table>
                     </div>
                 </div>
+
                 <div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
                     <div class="modal-dialog modal-lg">
                         <div class="modal-content">
@@ -96,7 +101,7 @@
                             <table class="table table-striped table-responsive-md">
                                 <tbody>
                                 <tr>
-                                    <td>Kvk nummer</td>
+                                    <td>KVK nummer</td>
                                     <td id="modalKvk"></td>
                                 </tr>
                                 <tr>
@@ -115,6 +120,11 @@
             </div>
         </main>
     </div>
+</div>
+
+<div class="col-xs-12" style="height:100px;"></div>
+<div class="row footer-default" id="footer">
+    <footer th:replace="fragments/footer :: footer-default"></footer>
 </div>
 
 <div th:replace="fragments/scripts :: scripts-before-closing-tag"></div>
