footer ingekort en 2 namen veranderd

--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="nl" xmlns:th="http://www.thymeleaf.org">
-<footer th:fragment="footer-default" class="fixed-bottom text-left text-white-50 bg-dark pb-2 pt-4">
+<footer th:fragment="footer-default" class="d-flex flex-column text-white-25 bg-dark flex-md-fill">
     <div class="container-fluid">
         <div id="cookies" class="container">
             <div class="row">
