--- a/src/main/resources/templates/pages/login.html
+++ b/src/main/resources/templates/pages/login.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="nl" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org">
-<head th:replace="fragments/head :: head-login (pageTitle='Login Employee', metaRobots='noindex, nofollow', metaDescription='', metaKeywords='')"></head>
+<head th:replace="fragments/head :: head-login (pageTitle='Login Customer', metaRobots='noindex, nofollow', metaDescription='', metaKeywords='')"></head>
 <body>
 
 <div class="container-fluid min-vh-100" id="page">
@@ -40,7 +40,6 @@
         </main>
     </div>
 </div>
-<div class="col-xs-12" style="height:100px;"></div>
 <div class="row footer-default" id="footer">
     <footer th:replace="fragments/footer :: footer-default"></footer>
 </div>
