--- a/src/main/resources/templates/pages/do-transaction.html
+++ b/src/main/resources/templates/pages/do-transaction.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <title>Geld overmaken</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <style>
+        .error {
+            background-color: red;
+        }
+    </style>
 </head>
 <body>
 <div class="container-my-2">
@@ -42,7 +48,10 @@
         <div class="col-md-6 form-group">
             <i class="fa fa-key icon"></i>
             <label>IBAN</label>
-            <input type="text" class="form-control" name="creditAccount" required>
+            <input id="iban" type="text" class="form-control" name="creditAccount" required>
+            <label id="error" hidden>
+                Ongeldige IBAN, probeer het opnieuw.
+            </label>
         </div>
         <div class="col-md-6 form-group">
             <i class="fa fa-key icon"></i>
@@ -61,5 +70,54 @@
         </div>
     </div>
 </div>
+
+<script>
+
+    document.querySelector('#iban').addEventListener('focusout', checkForIbanPart);
+
+    function checkForIbanPart() {
+        let regex = new RegExp(/^[A-Za-z]{2}[0-9]{2}[A-Za-z0-9]{1,30}$/i)
+        let iban = document.querySelector('#iban').value
+        let bodyContent = `iban=${iban}`
+
+        console.log('Iban is valide: ' + regex.test(iban))
+
+        if(regex.test(iban)){
+            fetch('http://localhost:8080/iban', {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/x-www-form-urlencoded'},
+                body: bodyContent
+            })
+            .then(response => {
+                if (response.status === 200) {
+                    console.log('De iban is gevonden in de database.')
+                    let iban = response.text()
+                    processIban(iban)
+                } else {
+                    console.log('De iban is helaas NIET gevonden in de database.')
+                    processError()
+                }
+            })
+            // .then(data => processIban(data))
+            .catch(error => {
+                console.log('Foutje ergens! ' + error)
+            })
+            ;
+        }
+    }
+
+    function processIban(iban){
+        document.getElementById('error').style.display = 'none';
+        document.getElementById('iban').classList.remove('error');
+    }
+
+    function processError(){
+        document.getElementById('error').style.display = 'block';
+        document.getElementById('iban').classList.add('error');
+    }
+
+</script>
+
 </body>
 </html>
