--- a/src/main/resources/templates/pages/open-account.html
+++ b/src/main/resources/templates/pages/open-account.html
@@ -71,51 +71,69 @@
     }
 
 </script>
-<div class="container">
-    <h1> Bankrekening openen</h1>
-    <hr>
-    <h2> Fijn dat u een rekening bij ons wilt openen.</h2>
-    <h3> U kunt direct uw nieuwe rekening bevestigen.</h3>
-
-    <dl class="row">
-        <dt class="col-sm-3">Rekeninghouder</dt>
-        <dd class="col-sm-9" th:text="${nameCurrentCus}" id="name" name="name" readonly></dd>
-    </dl>
-    <form action="/saveaccount" method="post" name="ibanForm">
-        <input type="text" th:field="*{customer.customerID}" value="customer.customerID" hidden/>
-
-        <div class="form-group">
-            <label for="ibanGenerator"></label>
-            <input type="text" th:field="*{account.iban}" id="ibanGenerator" value="" placeholder="IBAN" required/>
-            <input type="button" class="btn btn-primary" value="Uw nieuwe rekeningnummer" id="ibanButtonClicked"
-                   onclick="ibanButton()"/>
-        </div>
-        <div class="form-group">
-            <label for="balance">Uw huidige saldo:</label>
-            <input type="text" th:field="*{account.balance}" id="balance" class="form-control" placeholder="Saldo"
-                   name="balance" readonly/>
-        </div>
-        <div class="form-group form-check">
-            <label class="form-check-label">
-                <p><a href="https://www.termsandconditionsgenerator.com/live.php?token=WMGxy8SYoQkOH2QDFKuWdAqUeZ9mgMuS"
-                      onclick="centeredPopup(this.href,'myWindow','700','300','yes');return false">Algemene
-                    voorwaarden</a></p>
-                <input class="form-check-input" type="checkbox" name="remember" required> Ik ga akkoord met de
-                voorwaarden
-                <div class="valid-feedback">Valid.</div>
-                <div class="invalid-feedback">Graag aanvinken als u door zou willen gaan</div>
-            </label>
-        </div>
-        <div class="button-group">
-            <button type="submit" id="submit" class="btn btn-primary" onclick="submitButton()">Bevestigen</button>
-        </div>
-    </form>
-        <form action="#" method="get" th:action="@{/customer-with-accounts}">
-            <input type="submit" class="btn btn-primary" value="Annuleren">
-        </form>
+<div class="container-fluid min-vh-100" id="page">
+    <div id="header" class="row header-default">
+        <header th:replace="fragments/header :: header-default"></header>
     </div>
-<div class="row footer-default" id="footer">
-    <footer th:replace="fragments/footer :: footer-default"></footer>
+
+    <div id="main-content" align="center">
+        <main role="main" class="min-vw-100">
+            <div class="jumbotron"
+                 style="filter: brightness(1.25); background: linear-gradient(65deg, rgba(0, 0, 0, 0.95), rgba(0, 0, 0, 0) ), url('/images/DROVN5.svg'); background-position: left center; background-repeat: no-repeat; background-size: cover; width: 90%; max-height: 60%">
+                <div class="container pt-sm-2 pb-sm-2 text-white">
+                    <div class="container">
+                        <h2><span class="text-orange">Fijn dat u een rekening bij ons wilt openen.</span></h2>
+                        <h3> U kunt direct uw nieuwe rekening bevestigen.</h3>
+
+                        <h1 align="center"><span class="text-orange"> Rekeninghouder: </span><span
+                                style="color: #0066ff" th:text="${nameCurrentCus}"></span></h1>
+                        <p><br></p>
+                        <form action="/saveaccount" method="post" name="ibanForm">
+                            <input type="text" th:field="*{customer.customerID}" value="customer.customerID" hidden/>
+
+                            <div class="form-group w-25">
+                                <label for="ibanGenerator">Uw nieuwe rekeningnummer:</label>
+                                <input type="text" th:field="*{account.iban}" id="ibanGenerator"
+                                       placeholder="IBAN" required/>
+                                <!--input type="button" class="btn btn-primary" value="Uw nieuwe rekeningnummer">
+                                       onclick="ibanButton()"/!-->
+                            </div>
+                            <div class="form-group w-25">
+                                <label for="balance">Uw huidige saldo:</label>
+                                <input type="text" th:field="*{account.balance}" id="balance" class="form-control"
+                                       placeholder="Saldo"
+                                       name="balance" readonly/>
+                            </div>
+                            <div class="form-group form-check">
+                                <label class="form-check-label">
+                                    <p>
+                                        <a href="https://www.termsandconditionsgenerator.com/live.php?token=WMGxy8SYoQkOH2QDFKuWdAqUeZ9mgMuS"
+                                           onclick="centeredPopup(this.href,'myWindow','700','300','yes');return false">Algemene
+                                            voorwaarden</a></p>
+                                    <input class="form-check-input" type="checkbox" name="remember" required> Ik ga
+                                    akkoord met de voorwaarden
+                                    <div class="valid-feedback">Valid.</div>
+                                    <div class="invalid-feedback">Graag aanvinken als u door zou willen gaan</div>
+                                </label>
+                            </div>
+                            <div class="button-group">
+                                <button type="submit" id="submit" class="btn btn-primary" data-toggle="modal"
+                                        data-target="#modelConfirmation">
+                                    Bevestigen
+                                </button>
+                            </div>
+                        </form>
+                        <form action="#" method="get" th:action="@{/customer-with-accounts}">
+                            <input type="submit" class="btn btn-primary" value="Annuleren">
+                        </form>
+                    </div>
+                    <div class="row footer-default" id="footer">
+                        <footer th:replace="fragments/footer :: footer-default"></footer>
+                    </div>
+                </div>
+            </div>
+        </main>
+    </div>
 </div>
 <div class="modal fade" id="modelConfirmation" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered" role="document">
