Header logo height now matching button height + jQuery script that attaches footer to bottom if content is short.

--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="nl" xmlns:th="http://www.thymeleaf.org">
-<footer th:fragment="footer-default" class="d-flex flex-column text-white-25 bg-dark flex-md-fill">
+<footer class="col-12 text-white-25 bg-dark" id="footer" th:fragment="footer-default">
     <div class="container-fluid">
         <div id="cookies" class="container">
             <div class="row">
