--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -5,9 +5,7 @@
     <div class="container pl-0 pr-0">
         <nav class="navbar navbar-expand-lg">
             <a class="navbar-brand" href="#">
-                <img src="/images/DROVN2.svg" width="150" height="150"
-                     class="d-inline-block align-top" alt="">
-
+                <img alt="" class="d-inline-block align-top" height="50" src="/images/DROVN2.svg" width="50">
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                     aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -72,9 +70,7 @@
     <div class="container pl-0 pr-0">
         <nav class="navbar navbar-expand-lg">
             <a class="navbar-brand" href="#">
-                <img src="/images/DROVN2.svg" width="150" height="150"
-                     class="d-inline-block align-top" alt="">
-
+                <img alt="" class="d-inline-block align-top" height="50" src="/images/DROVN2.svg" width="50">
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                     aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
