--- a/src/main/resources/templates/pages/registration.html
+++ b/src/main/resources/templates/pages/registration.html
@@ -210,14 +210,21 @@
                                     <div class="col-md-2 form-group">
                                         <label for="kvkNumber">KvK-nummer</label>
                                         <input class="form-control" id="kvkNumber" maxlength="8" minlength="8"
-                                               name="kvkNumber" pattern="^[0-9]{8}$" required th:field="*{kvkNumber}"
+                                               name="kvkNumber"
+                                               pattern="^[0-9]{8}$"
+                                               patternMismatch="Een geldig KvK-nummer bestaat uit 8 cijfers."
+                                               required
+                                               th:field="*{kvkNumber}"
+                                               tooShort="Een geldig KvK-nummer bestaat uit 8 cijfers."
                                                type="text"/>
                                         <div class="invalid-feedback"></div>
                                     </div>
                                     <div class="col-md-2 form-group">
                                         <label for="vatNumber">Btw-nummer</label>
-                                        <input class="form-control" id="vatNumber" maxlength="12" minlength="12"
-                                               name="vatNumber" pattern="^(NL)?[0-9]{9}B[0-9]{2}$" required
+                                        <input class="form-control" id="vatNumber"
+                                               name="vatNumber" pattern="^(NL)?[0-9]{9}B[0-9]{2}$"
+                                               patternMismatch="Een geldig Btw-nummer heeft format: NL123456789B01"
+                                               required
                                                th:field="*{vatNumber}" type="text"/>
                                         <div class="invalid-feedback"></div>
                                     </div>
@@ -226,36 +233,34 @@
                                     </div>
                                     <div class="col-md-2 form-group">
                                         <label for="postalCode_legal">Postcode</label>
-                                        <input aria-describedby="postalCode_legalHelp" class="form-control"
-                                               id="postalCode_legal" maxlength="7" minlength="6" name="postalCode_legal"
-                                               pattern="^[0-9]{4}[ A-Z]{2,3}$" required th:field="*{postalCode}"
+                                        <input aria-describedby="postalCodeHelp" class="form-control"
+                                               id="postalCode_legal"
+                                               maxlength="7" minlength="6" name="postalCode"
+                                               pattern="^[1-9][0-9]{3}[\s]?[A-Za-z]{2}$"
+                                               patternMismatch="Ongeldige postcode." required th:field="*{postalCode}"
                                                type="text"/>
                                         <div class="invalid-feedback"></div>
-                                        <small class="form-text text-muted" id="postalCode_legalHelp">Format:
-                                            1234AB</small>
                                     </div>
                                     <div class="col-md-2 form-group">
                                         <label for="homeNumber_legal">Huisnr.</label>
-                                        <input aria-describedby="homeNumber_legalHelp" class="form-control"
-                                               id="homeNumber_legal" maxlength="10" name="homeNumber_legal"
-                                               pattern="^.*[0-9a-zA-z-. ]{0,}$" required th:field="*{homeNumber}"
-                                               type="text"/>
+                                        <input class="form-control" id="homeNumber_legal"
+                                               maxlength="10" name="homeNumber" pattern="([-.,&_`() ]|[A-z0-9])+"
+                                               patternMismatch="Ongeldig huisnummer."
+                                               required th:field="*{homeNumber}" type="text"/>
                                         <div class="invalid-feedback"></div>
-                                        <small class="form-text text-muted" id="homeNumber_legalHelp">Format: 123, 12b,
-                                            123-I</small>
                                     </div>
                                     <div class="col-md-4 form-group">
                                         <label for="street_legal">Straat</label>
-                                        <input class="form-control" id="street_legal" maxlength="45"
-                                               name="street_legal" pattern="^.*[0-9a-zA-z-. ]{0,}$" required
+                                        <input class="form-control" id="street_legal" maxlength="45" name="street"
+                                               pattern="^.*[\w\d\s]$" patternMismatch="Ongeldige straatnaam." required
                                                th:field="*{street}" type="text"/>
                                         <div class="invalid-feedback"></div>
                                     </div>
                                     <div class="col-md-4 form-group">
-                                        <label for="residence_legal">Plaats</label>
-                                        <input class="form-control" id="residence_legal" maxlength="45"
-                                               name="residence_legal" pattern="^.*[0-9a-zA-z-. ]{0,}$" required
-                                               th:field="*{residence}" type="text"/>
+                                        <label for="residence_legal">Woonplaats</label>
+                                        <input class="form-control" id="residence_legal" maxlength="45" name="residence"
+                                               pattern="([\d\w])+" patternMismatch="Ongeldige plaatsnaam."
+                                               required th:field="*{residence}" type="text"/>
                                         <div class="invalid-feedback"></div>
                                     </div>
                                     <div class="col-md-12 mt-5 mb-3">
@@ -263,24 +268,31 @@
                                     </div>
                                     <div class="col-md-2 form-group">
                                         <label for="username_legal">Gebruikersnaam</label>
-                                        <input class="form-control" id="username_legal" maxlength="16" minlength="4"
-                                               name="userName" pattern="^[A-Za-z0-9_]{4,16}$"
+                                        <input class="form-control" id="username_legal"
+                                               maxlength="16" minlength="4" name="userName"
+                                               pattern="^[A-Za-z0-9_]+$"
+                                               patternMismatch="Alleen hoofdletters, kleine letters, cijfers  of underscore."
                                                required th:field="*{userName}" type="text"/>
                                         <div class="invalid-feedback"></div>
                                     </div>
                                     <div class="col-md-2 form-group">
                                         <label for="password_legal">Wachtwoord</label>
-                                        <input class="form-control" id="password_legal" maxlength="16" minlength="6"
-                                               name="password_legal"
-                                               pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[@$!%*?&])[A-Za-z\d@$!%*?&]{6,}$"
+                                        <input class="form-control" id="password_legal"
+                                               matchField="passwordConfirmation" maxlength="16" minlength="6"
+                                               name="password" noMatchMessage="Wachtwoorden komen niet overeen."
+                                               pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[@$!%*?&])[A-Za-z\d@$!%*?&]{0,}$"
+                                               patternMismatch="Gebruik minimaal één hoofdletter, kleine letter, cijfer en speciaal teken."
                                                required th:field="*{password}" type="password"/>
                                         <div class="invalid-feedback"></div>
                                     </div>
                                     <div class="col-md-2 form-group">
                                         <label for="password_legal_confirmation">Bevestig wachtwoord</label>
-                                        <input class="form-control" id="password_legal_confirmation" maxlength="16"
-                                               minlength="6" name="password_legal_confirmation"
-                                               pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[@$!%*?&])[A-Za-z\d@$!%*?&]{6,}$"
+                                        <input class="form-control" id="password_legal_confirmation"
+                                               matchField="password" maxlength="16" minlength="6"
+                                               name="passwordConfirmation"
+                                               noMatchMessage="Wachtwoorden komen niet overeen."
+                                               pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[@$!%*?&])[A-Za-z\d@$!%*?&]{0,}$"
+                                               patternMismatch="Gebruik minimaal één hoofdletter, kleine letter, cijfer en speciaal teken."
                                                required th:field="*{passwordConfirmation}" type="password"/>
                                         <div class="invalid-feedback"></div>
                                     </div>
@@ -319,18 +331,5 @@
         </div>
     </div>
 </div>
-<!--
-<script>
-    const inputs = document.querySelectorAll('input');
-    // inputs.forEach(input => console.log(input.id));
-    const log = document.querySelector('#values');
-
-    inputs.forEach(input => addEventListener('input', updateValue));
-
-    function updateValue(event) {
-        log.textContent = event.target.value;
-    }
-</script>
--->
 </body>
 </html>
