--- a/src/main/resources/templates/pages/login-employee.html
+++ b/src/main/resources/templates/pages/login-employee.html
@@ -3,28 +3,42 @@
 <head th:replace="fragments/head :: head-login (pageTitle='Login Employee', metaRobots='noindex, nofollow', metaDescription='', metaKeywords='')"></head>
 <body>
 
+<style>
+</style>
+
 <div class="container-fluid min-vh-100" id="page">
     <div id="header" class="row header-default">
         <header th:replace="fragments/header :: head-login"></header>
     </div>
-    <div id="main-content" class="row">
+    <div id="main-content">
         <main role="main" class="min-vw-100">
 
             <div class="container-my-3">
                 <div class="row">
                     <div class="col-md-8 mx-auto">
-                        <h2>Welkom beste medewerker, u kunt hieronder inloggen</h2>
-                        <form action="#" th:action="@{/loginemployee}" method="post">
+                        <h2>Inloggen medewerker</h2>
+                        <form class="form-horizontal" action="#" th:action="@{/loginemployee}" method="post">
 
                             <div class="col-md-6 form-group">
                                 <i class="fa fa-user icon"></i>
-                                <label>Gebruikersnaam</label>
-                                <input type="text" class="form-control" name="userName" required>
+                                <label class="control-label" for="validationServer01">Gebruikersnaam</label>
+                                <input type="text" class="form-control is-valid" id="validationServer01" name="userName" required>
+                                <div class="valid-feedback">
+                                    Looks good!
+                                </div>
                             </div>
                             <div class="col-md-6 form-group">
                                 <i class="fa fa-key icon"></i>
-                                <label>Wachtwoord</label>
-                                <input type="password" class="form-control" name="password" required>
+                                <label class="control-label" for="validationServer02">Wachtwoord</label>
+                                <input type="password" class="form-control is-invalid" id="validationServer02" name="password" required>
+                                <div class="invalid-feedback">
+                                    Please fill in a valid password.
+                                </div>
+                            </div>
+                            <div class="checkbox">
+                                <label>
+                                    <input type="checkbox" name="remember" value="1"> Onthoud me
+                                </label>
                             </div>
                             <div class="col-md-4">
                                 <input type="submit" class="btn btn-primary" value="Inloggen">
@@ -42,5 +56,9 @@
 <div class="row footer-default" id="footer">
     <footer th:replace="fragments/footer :: footer-default"></footer>
 </div>
+
+<script>
+</script>
+
 </body>
 </html>
