--- a/src/main/resources/templates/pages/open-account.html
+++ b/src/main/resources/templates/pages/open-account.html
@@ -9,68 +9,7 @@
     <title>Rekening openen</title>
 </head>
 <body>
-<script>
 
-    window.onload = function random() {
-        let country_code = "NL"
-        let bank_code = "DROVN";
-        let IBAN = "";
-        let string_length = 11;
-        let characters = "0123456789";
-        for (let i = 0; i < string_length; i++) {
-            IBAN += characters.charAt(Math.floor(Math.random() * characters.length));
-        }
-        let first_part = IBAN.substring(0, 2)
-        let final_IBAN = IBAN.substring(0, 9);
-
-        return document.ibanForm.ibanGenerator.value = country_code + first_part + bank_code + final_IBAN;
-    }
-
-    let popupWindow = null;
-    function centeredPopup(url, winName, w, h, scroll) {
-        LeftPosition = (screen.width) ? (screen.width - w) / 2 : 0;
-        TopPosition = (screen.height) ? (screen.height - h) / 2 : 0;
-        settings =
-            'height=' + h + ',width=' + w + ',top=' + TopPosition + ',left=' + LeftPosition + ',scrollbars=' + scroll + ',resizable'
-        popupWindow = window.open(url, winName, settings);
-
-    }
-
-    function ibanSubmitButton() {
-        document.getElementById('submit').addEventListener("click", checkUniqueIban);
-
-    }
-
-    var myHeaders = new Headers();
-    myHeaders.append("Authorization", "Bearer 3efb927f-c13d-4f17-a8ed-ccfac087592d");
-    myHeaders.append("key_drovn", "");
-    myHeaders.append("Content-Type", "application/x-www-form-urlencoded");
-
-    var urlencoded = new URLSearchParams();
-    urlencoded.append("iban", "NL50DROVN505720623");
-
-    var requestOptions = {
-        method: 'POST',
-        headers: myHeaders,
-        redirect: 'follow'
-    };
-
-    function checkUniqueIban() {
-        let iban = document.getElementById('ibanGenerator').value;
-
-        if (iban) {
-            let formData = `ibanGenerator=${iban}`
-
-            fetch("http://localhost:8080/openaccount/check_iban", requestOptions, {
-                body: formData,
-            })
-                .then(response => response.text())
-                .then(result => console.log(result))
-                .catch(error => console.log('error', error));
-        }
-    }
-
-</script>
 <div class="container-fluid min-vh-100" id="page">
     <div id="header" class="row header-default">
         <header th:replace="fragments/header :: header-default"></header>
@@ -95,8 +34,9 @@
                                 <label for="ibanGenerator">Uw nieuwe rekeningnummer:</label>
                                 <input type="text" th:field="*{account.iban}" id="ibanGenerator"
                                        placeholder="IBAN" required/>
-                                <!--input type="button" class="btn btn-primary" value="Uw nieuwe rekeningnummer">
-                                       onclick="ibanButton()"/!-->
+                                <label id="error" hidden>
+                                    Ongeldige IBAN, probeer het opnieuw.
+                                </label>
                             </div>
                             <div class="form-group w-25">
                                 <label for="balance">Uw huidige saldo:</label>
@@ -154,5 +94,80 @@
         </div>
     </div>
 </div>
+<script>
+
+    window.onload = function random() {
+        let country_code = "NL"
+        let bank_code = "DROVN";
+        let IBAN = "";
+        let string_length = 11;
+        let characters = "0123456789";
+        for (let i = 0; i < string_length; i++) {
+            IBAN += characters.charAt(Math.floor(Math.random() * characters.length));
+        }
+        let first_part = IBAN.substring(0, 2)
+        let final_IBAN = IBAN.substring(0, 9);
+
+        return document.ibanForm.ibanGenerator.value = country_code + first_part + bank_code + final_IBAN;
+    }
+
+    let popupWindow = null;
+    function centeredPopup(url, winName, w, h, scroll) {
+        LeftPosition = (screen.width) ? (screen.width - w) / 2 : 0;
+        TopPosition = (screen.height) ? (screen.height - h) / 2 : 0;
+        settings =
+            'height=' + h + ',width=' + w + ',top=' + TopPosition + ',left=' + LeftPosition + ',scrollbars=' + scroll + ',resizable'
+        popupWindow = window.open(url, winName, settings);
+
+    }
+
+
+        document.querySelector("#ibanGenerator").addEventListener("click", checkUniqueIban);
+        let iban = document.getElementById('ibanGenerator').value;
+
+
+    function checkUniqueIban() {
+        let regex = new RegExp(/^[A-Za-z]{2}[0-9]{2}[A-Za-z0-9]{1,30}$/i);
+        let iban = document.querySelector("#ibanGenerator").value;
+            let formData = `ibanGenerator=${iban}`
+            console.log('Iban is valide: ' + regex.test(iban))
+
+            if(regex.test(iban)){
+
+            fetch("http://localhost:8080/check_iban", {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/x-www-form-urlencoded'},
+                body: bodyContent
+            })
+                .then(response => {
+
+                    if(response.status === 200){
+                        console.log('De iban is niet gevonden in de DB')
+                        let iban = response.text()
+                        processIban(iban)
+                        return response.json()
+                    } else if(response.status === 401) {
+                        console.log("iban wel gevonden gevonden")
+                        processError();
+                    }
+                })
+                // .then(data => processIban(data))
+                .catch(error => {
+                    console.log('Foutje ergens! ' + error)
+                })
+            ;
+            }
+    }
+    function processIban(iban){
+        document.getElementById('error').style.display = 'none';
+        document.getElementById('iban').classList.remove('error');
+    }
+
+    function processError(){
+        document.getElementById('error').style.display = 'block';
+        document.getElementById('iban').classList.add('error');
+    }
+</script>
 </body>
 </html>
