--- a/src/main/resources/templates/pages/login.html
+++ b/src/main/resources/templates/pages/login.html
@@ -14,7 +14,7 @@
                 <div class="row">
                     <div class="col-md-8 mx-auto">
                         <h2>Inloggen klant</h2>
-                        <form action="#" th:action="@{/login}" method="post">
+                        <form action="#" th:action="@{/customer-with-accounts}" method="post">
 
                             <div class="col-md-6 form-group">
                                 <i class="fa fa-user icon"></i>
