Now using form fragments in registration confirmation

--- a/src/main/resources/templates/fragments/head.html
+++ b/src/main/resources/templates/fragments/head.html
@@ -24,7 +24,7 @@
     <script src="/js/jquery/jquery.min.js"></script>
     <script src="/js/bootstrap/bootstrap.bundle.min.js"></script>
 </head>
-<head th:fragment="head-with-scriptloader (pageTitle, metaRobots, metaDescription, metaKeywords)">
+<head th:fragment="head-registration (pageTitle, metaRobots, metaDescription, metaKeywords)">
     <meta charset="UTF-8"/>
     <title th:text="${pageTitle}">Head</title>
     <meta name="robots" th:content="${metaRobots}"/>
