--- a/src/main/resources/templates/pages/confirmation-business.html
+++ b/src/main/resources/templates/pages/confirmation-business.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="nl" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org">
-<head th:replace="fragments/head :: head-default (pageTitle='Registratie bevestigen', metaRobots='noindex, nofollow', metaDescription='', metaKeywords='')"></head>
+<head th:replace="fragments/head :: head-registration (pageTitle='Bevestiging Registratie - Zakelijk', metaRobots='noindex, nofollow', metaDescription='', metaKeywords='')"></head>
 <body>
 <div class="container-fluid min-vh-100" id="page">
     <div class="row header-default" id="header">
@@ -111,110 +111,7 @@
                 <div class="pt-5 pb-5" id="accordion">
                     <div aria-labelledby="headingOne" class="collapse show" data-parent="#accordion"
                          id="collapseOne">
-                        <form action="#" class="row needs-validation" method="post" novalidate
-                              th:action="@{/registratie-zakelijk}" th:object="${businessRegistrationDto}">
-                            <div class="col-md-12 mt-2 mb-3">
-                                <h4 class="border border-dark border-w-2 rounded p-3">Bedrijfsgegevens</h4>
-                            </div>
-                            <div class="col-md-4 form-group">
-                                <label for="companyName">Bedrijfsnaam</label>
-                                <input class="form-control" id="companyName" maxlength="45"
-                                       name="companyName" required th:field="*{companyName}" type="text"/>
-                                <div class="invalid-feedback"></div>
-                            </div>
-                            <div class="col-md-4 form-group">
-                                <label for="sector">Sector</label>
-                                <select class="form-control" id="sector" name="sector" th:field="*{sector}"
-                                        th:required="true">
-                                    <option value="">Selecteer een sector</option>
-                                    <option th:each="sector : ${T(nl.hva.miw.internetbanking.model.Sector).values()}"
-                                            th:text="${sector.getLabelSector()}" th:value="${sector}">
-                                </select>
-                                <div class="invalid-feedback"></div>
-                            </div>
-                            <div class="col-md-2 form-group">
-                                <label for="kvkNumber">KvK-nummer</label>
-                                <input class="form-control" id="kvkNumber" maxlength="8" minlength="8" name="kvkNumber"
-                                       pattern="^[0-9]{8}$" required th:field="*{kvkNumber}" type="text"/>
-                                <div class="invalid-feedback"></div>
-                            </div>
-                            <div class="col-md-2 form-group">
-                                <label for="vatNumber">Btw-nummer</label>
-                                <input class="form-control" id="vatNumber" maxlength="12" minlength="12"
-                                       name="vatNumber" pattern="^(NL)?[0-9]{9}B[0-9]{2}$" required
-                                       th:field="*{vatNumber}" type="text"/>
-                                <div class="invalid-feedback"></div>
-                            </div>
-                            <div class="col-md-12 mt-5 mb-3">
-                                <h4 class="border border-dark border-w-2 rounded p-3">Adresgegevens</h4>
-                            </div>
-                            <div class="col-md-2 form-group">
-                                <label for="postalCode_legal">Postcode</label>
-                                <input aria-describedby="postalCode_legalHelp" class="form-control"
-                                       id="postalCode_legal" maxlength="7" minlength="6" name="postalCode_legal"
-                                       pattern="^[0-9]{4}[ A-Z]{2,3}$" required th:field="*{postalCode}"
-                                       type="text"/>
-                                <div class="invalid-feedback"></div>
-                                <small class="form-text text-muted" id="postalCode_legalHelp">Format:
-                                    1234AB</small>
-                            </div>
-                            <div class="col-md-2 form-group">
-                                <label for="homeNumber_legal">Huisnr.</label>
-                                <input aria-describedby="homeNumber_legalHelp" class="form-control"
-                                       id="homeNumber_legal" maxlength="10" name="homeNumber_legal"
-                                       pattern="^.*[0-9a-zA-z-. ]{0,}$" required th:field="*{homeNumber}"
-                                       type="text"/>
-                                <div class="invalid-feedback"></div>
-                                <small class="form-text text-muted" id="homeNumber_legalHelp">Format: 123, 12b,
-                                    123-I</small>
-                            </div>
-                            <div class="col-md-4 form-group">
-                                <label for="street_legal">Straat</label>
-                                <input class="form-control" id="street_legal" maxlength="45"
-                                       name="street_legal" pattern="^.*[0-9a-zA-z-. ]{0,}$" required
-                                       th:field="*{street}" type="text"/>
-                                <div class="invalid-feedback"></div>
-                            </div>
-                            <div class="col-md-4 form-group">
-                                <label for="residence_legal">Plaats</label>
-                                <input class="form-control" id="residence_legal" maxlength="45"
-                                       name="residence_legal" pattern="^.*[0-9a-zA-z-. ]{0,}$" required
-                                       th:field="*{residence}" type="text"/>
-                                <div class="invalid-feedback"></div>
-                            </div>
-                            <div class="col-md-12 mt-5 mb-3">
-                                <h4 class="border border-dark border-w-2 rounded p-3">Accountgegevens</h4>
-                            </div>
-                            <div class="col-md-2 form-group">
-                                <label for="username_legal">Gebruikersnaam</label>
-                                <input class="form-control" id="username_legal" maxlength="16" minlength="4"
-                                       name="username_legal" pattern="^[A-Za-z0-9_]{4,16}$"
-                                       required th:field="*{userName}" type="text"/>
-                                <div class="invalid-feedback"></div>
-                            </div>
-                            <div class="col-md-2 form-group">
-                                <label for="password_legal">Wachtwoord</label>
-                                <input class="form-control" id="password_legal" maxlength="16" minlength="6"
-                                       name="password_legal"
-                                       pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[@$!%*?&])[A-Za-z\d@$!%*?&]{6,}$"
-                                       required th:field="*{password}" type="password"/>
-                                <div class="invalid-feedback"></div>
-                            </div>
-                            <div class="col-md-2 form-group">
-                                <label for="password_legal_confirmation">Bevestig wachtwoord</label>
-                                <input class="form-control" id="password_legal_confirmation" maxlength="16"
-                                       minlength="6" name="password_legal_confirmation"
-                                       pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[@$!%*?&])[A-Za-z\d@$!%*?&]{6,}$"
-                                       required th:field="*{passwordConfirmation}" type="password"/>
-                                <div class="invalid-feedback"></div>
-                            </div>
-                            <div class="col-md-12 mt-3">
-                                <div class="col-md-6 pl-0">
-                                    <input class="btn btn-secondary btn-lg btn-block mt-4 mb-4 pt-3 pb-3" type="submit"
-                                           value="Gegevens wijzigen"/>
-                                </div>
-                            </div>
-                        </form>
+                        <form th:replace="fragments/forms :: form-registration-business"></form>
                     </div>
                 </div>
             </div>
@@ -224,26 +121,22 @@
         <footer th:replace="fragments/footer :: footer-default"></footer>
     </div>
 </div> <!-- /container - #page -->
+<!-- TODO: implement
+<div class="modal" id="modalVerificationError" role="dialog" tabindex="-1">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title"></h5>
+                <button aria-label="Close" class="close" data-dismiss="modal" type="button">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+            </div>
+        </div>
+    </div>
+</div>
+-->
 <div th:replace="fragments/scripts :: scripts-before-closing-tag"></div>
-<script>
-    // Script for custom form-validation
-    (function () {
-        'use strict';
-        window.addEventListener('load', function () {
-            // Fetch all forms for custom validation
-            var forms = document.getElementsByClassName('needs-validation');
-            // Loop over the forms and prevent submission
-            var validation = Array.prototype.filter.call(forms, function (form) {
-                form.addEventListener('submit', function (event) {
-                    if (form.checkValidity() === false) {
-                        event.preventDefault();
-                        event.stopPropagation();
-                    }
-                    form.classList.add('was-validated');
-                }, false);
-            });
-        }, false);
-    })();
-</script>
 </body>
 </html>
