--- a/src/main/resources/templates/pages/confirmation-private.html
+++ b/src/main/resources/templates/pages/confirmation-private.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="nl" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org">
-<head th:replace="fragments/head :: head-default (pageTitle='Registratie bevestigen', metaRobots='noindex, nofollow', metaDescription='', metaKeywords='')"></head>
+<head th:replace="fragments/head :: head-registration (pageTitle='Bevestiging Registratie - Particulier', metaRobots='noindex, nofollow', metaDescription='', metaKeywords='')"></head>
 <body>
 <div class="container-fluid min-vh-100" id="page">
     <div class="row header-default" id="header">
@@ -131,141 +131,7 @@
                 <div class="pt-5 pb-5" id="accordion">
                     <div aria-labelledby="headingOne" class="collapse show" data-parent="#accordion"
                          id="collapseOne">
-                        <form action="#" class="row needs-validation" id="confirmation-private" method="post" novalidate
-                              th:action="@{/registratie-particulier}" th:object="${privateRegistrationDto}">
-                            <div class="col-md-12 mt-2 mb-3">
-                                <h4 class="border border-dark border-w-2 rounded p-3">Persoonlijke gegevens</h4>
-                            </div>
-                            <div class="col-md-2 form-group">
-                                <label for="initials">Voorletters</label>
-                                <input class="form-control" id="initials" maxlength="10"
-                                       name="initials" pattern="^.*[a-zA-Z. ]{0,}$" required
-                                       th:field="*{initials}" type="text"/>
-                                <div class="invalid-feedback"></div>
-                            </div>
-                            <div class="col-md-4 form-group">
-                                <label for="firstname">Voornaam</label>
-                                <input class="form-control" id="firstname" maxlength="15" name="firstName"
-                                       pattern="^.*[a-zA-Z-. ]{0,}$" required th:field="*{firstName}"
-                                       type="text"/>
-                                <div class="invalid-feedback"></div>
-                            </div>
-                            <div class="col-md-2 form-group">
-                                <label for="preposition">Tussenvoegsel</label>
-                                <input class="form-control" id="preposition" maxlength="15" name="preposition"
-                                       pattern="^.*[a-zA-Z-. ]{0,}$" th:field="*{preposition}" type="text"/>
-                                <div class="invalid-feedback"></div>
-                            </div>
-                            <div class="col-md-4 form-group">
-                                <label for="lastname">Achternaam</label>
-                                <input class="form-control" id="lastname" maxlength="45" name="surName"
-                                       pattern="^.*[a-zA-Z-. ]{0,}$" required th:field="*{surName}"
-                                       type="text"/>
-                                <div class="invalid-feedback"></div>
-                            </div>
-                            <div class="col-md-2 form-group">
-                                <label for="dateOfBirth">Geboortedatum</label>
-                                <input aria-describedby="dateOfBirthHelp" class="form-control" id="dateOfBirth"
-                                       maxlength="10" minlength="10" name="dateOfBirth"
-                                       pattern="^[0-9]{4}-[0-9]{2}-[0-9]{2}$" required th:field="*{dateOfBirth}"
-                                       type="date"/>
-                                <div class="invalid-feedback"></div>
-                                <small class="form-text text-muted" id="dateOfBirthHelp">Format:
-                                    jjjj-mm-dd</small>
-                            </div>
-                            <div class="col-md-4 form-group">
-                                <label for="socialSecurityNumber">Burgerservicenummer (BSN)</label>
-                                <input aria-describedby="socialSecurityNumberHelp" class="form-control"
-                                       id="socialSecurityNumber" maxlength="9" minlength="8"
-                                       name="socialSecurityNumber" pattern="^[0-9]{8,9}$" required
-                                       th:field="*{socialSecurityNumber}" type="number"/>
-                                <div class="invalid-feedback"></div>
-                                <small class="form-text text-muted" id="socialSecurityNumberHelp">Je unieke,
-                                    8- of 9-cijferige persoonsnummer</small>
-                            </div>
-                            <div class="col-md-4 form-group">
-                                <label for="email">Emailadres</label>
-                                <input class="form-control" id="email" maxlength="45" name="email" required
-                                       th:field="*{email}" type="email"/>
-                                <div class="invalid-feedback"></div>
-                            </div>
-                            <div class="col-md-2 form-group">
-                                <label for="mobile">Telefoon (mobiel)</label>
-                                <input aria-describedby="mobileHelp" class="form-control" id="mobile"
-                                       maxlength="11" name="mobile" pattern="^[06]{2}-[0-9]{8}$" required
-                                       th:field="*{phone}" type="tel"/>
-                                <div class="invalid-feedback"></div>
-                                <small class="form-text text-muted" id="mobileHelp">Format: 06-12345678</small>
-                            </div>
-                            <div class="col-md-12 mt-5 mb-3">
-                                <h4 class="border border-dark border-w-2 rounded p-3">Adresgegevens</h4>
-                            </div>
-                            <div class="col-md-2 form-group">
-                                <label for="postalCode">Postcode</label>
-                                <input aria-describedby="postalCodeHelp" class="form-control" id="postalCode"
-                                       maxlength="7" minlength="6" name="postalCode"
-                                       pattern="^[0-9]{4}[ A-Z]{2,3}$" required th:field="*{postalCode}"
-                                       type="text"/>
-                                <div class="invalid-feedback"></div>
-                                <small class="form-text text-muted" id="postalCodeHelp">Format: 1234AB</small>
-                            </div>
-                            <div class="col-md-2 form-group">
-                                <label for="homeNumber">Huisnr.</label>
-                                <input aria-describedby="homeNumberHelp" class="form-control" id="homeNumber"
-                                       maxlength="10" name="homeNumber" pattern="^.*[0-9a-zA-z-. ]{0,}$"
-                                       required th:field="*{homeNumber}" type="text"/>
-                                <div class="invalid-feedback"></div>
-                                <small class="form-text text-muted" id="homeNumberHelp">Format: 123, 12b,
-                                    123-I</small>
-                            </div>
-                            <div class="col-md-4 form-group">
-                                <label for="street">Straat</label>
-                                <input class="form-control" id="street" maxlength="45" name="street"
-                                       pattern="^.*[0-9a-zA-z-. ]{0,}$" required th:field="*{street}"
-                                       type="text"/>
-                                <div class="invalid-feedback"></div>
-                            </div>
-                            <div class="col-md-4 form-group">
-                                <label for="residence">Woonplaats</label>
-                                <input class="form-control" id="residence" maxlength="45" name="residence"
-                                       pattern="^.*[0-9a-zA-z-. ]{0,}$" required th:field="*{residence}"
-                                       type="text"/>
-                                <div class="invalid-feedback"></div>
-                            </div>
-                            <div class="col-md-12 mt-5 mb-3">
-                                <h4 class="border border-dark border-w-2 rounded p-3">Accountgegevens</h4>
-                            </div>
-                            <div class="col-md-2 form-group">
-                                <label for="username_private">Gebruikersnaam</label>
-                                <input class="form-control" id="username_private" maxlength="16"
-                                       minlength="4" name="username_private" pattern="^[A-Za-z0-9_]{4,16}$"
-                                       required
-                                       th:field="*{userName}" type="text"/>
-                                <div class="invalid-feedback"></div>
-                            </div>
-                            <div class="col-md-2 form-group">
-                                <label for="password_private">Wachtwoord</label>
-                                <input class="form-control" id="password_private" maxlength="16"
-                                       minlength="6" name="password_private"
-                                       pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[@$!%*?&])[A-Za-z\d@$!%*?&]{6,}$"
-                                       required th:field="*{password}" type="password"/>
-                                <div class="invalid-feedback"></div>
-                            </div>
-                            <div class="col-md-2 form-group">
-                                <label for="password_private_confirmation">Bevestig wachtwoord</label>
-                                <input class="form-control" id="password_private_confirmation"
-                                       maxlength="16" minlength="6" name="password_private_confirmation"
-                                       pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[@$!%*?&])[A-Za-z\d@$!%*?&]{6,}$"
-                                       required th:field="*{passwordConfirmation}" type="password"/>
-                                <div class="invalid-feedback"></div>
-                            </div>
-                            <div class="col-md-12 mt-3">
-                                <div class="col-md-6 pl-0">
-                                    <input class="btn btn-secondary btn-lg btn-block mt-4 mb-4 pt-3 pb-3" type="submit"
-                                           value="Gegevens wijzigen"/>
-                                </div>
-                            </div>
-                        </form>
+                        <form th:replace="fragments/forms :: form-registration-private"></form>
                     </div>
                 </div>
             </div>
@@ -275,26 +141,22 @@
         <footer th:replace="fragments/footer :: footer-default"></footer>
     </div>
 </div> <!-- /container - #page -->
+<!-- TODO: implement
+<div class="modal" id="modalVerificationError" role="dialog" tabindex="-1">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title"></h5>
+                <button aria-label="Close" class="close" data-dismiss="modal" type="button">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+            </div>
+        </div>
+    </div>
+</div>
+-->
 <div th:replace="fragments/scripts :: scripts-before-closing-tag"></div>
-<script>
-    // Script for custom form-validation
-    (function () {
-        'use strict';
-        window.addEventListener('load', function () {
-            // Fetch all forms for custom validation
-            var forms = document.getElementsByClassName('needs-validation');
-            // Loop over the forms and prevent submission
-            var validation = Array.prototype.filter.call(forms, function (form) {
-                form.addEventListener('submit', function (event) {
-                    if (form.checkValidity() === false) {
-                        event.preventDefault();
-                        event.stopPropagation();
-                    }
-                    form.classList.add('was-validated');
-                }, false);
-            });
-        }, false);
-    })();
-</script>
 </body>
 </html>
