--- a/src/main/resources/templates/pages/confirmation-business.html
+++ b/src/main/resources/templates/pages/confirmation-business.html
@@ -90,28 +90,13 @@
                             </tr>
                             </tbody>
                         </table>
-                        <form action="#" class="row" method="post" th:action="@{/bevestiging-zakelijk}"
-                              th:object="${businessRegistrationDto}">
-                            <input th:field="*{companyName}" type="hidden">
-                            <input th:field="*{kvkNumber}" type="hidden">
-                            <input th:field="*{sector}" type="hidden">
-                            <input th:field="*{vatNumber}" type="hidden">
-                            <input th:field="*{postalCode}" type="hidden">
-                            <input th:field="*{homeNumber}" type="hidden">
-                            <input th:field="*{street}" type="hidden">
-                            <input th:field="*{residence}" type="hidden">
-                            <input th:field="*{userName}" type="hidden">
-                            <input th:field="*{password}" type="hidden">
-                            <input th:field="*{passwordConfirmation}" type="hidden">
-                            <input class="btn btn-primary btn-lg btn-block mt-0 ml-3 mb-4 mr-2 pt-3 pb-3 " type="submit"
-                                   value="Registratie voltooien"/>
-                        </form>
+                        <form th:replace="fragments/form :: form-confirmation-business-hidden"></form>
                     </div>
                 </div>
                 <div class="pt-5 pb-5" id="accordion">
                     <div aria-labelledby="headingOne" class="collapse show" data-parent="#accordion"
                          id="collapseOne">
-                        <form th:replace="fragments/forms :: form-registration-business"></form>
+                        <form th:replace="fragments/form :: form-registration-business"></form>
                     </div>
                 </div>
             </div>
