--- a/src/main/resources/templates/pages/registration.html
+++ b/src/main/resources/templates/pages/registration.html
@@ -35,11 +35,11 @@
                         <div class="pt-5 pb-5" id="accordion">
                             <div aria-labelledby="headingOne" class="collapse show" data-parent="#accordion"
                                  id="collapseOne">
-                                <form th:replace="fragments/forms :: form-registration-private"></form>
+                                <form th:replace="fragments/form :: form-registration-private"></form>
                             </div>
                             <div aria-labelledby="headingTwo" class="collapse" data-parent="#accordion"
                                  id="collapseTwo">
-                                <form th:replace="fragments/forms :: form-registration-business"></form>
+                                <form th:replace="fragments/form :: form-registration-business"></form>
                             </div>
                         </div>
 
