--- a/src/main/resources/templates/pages/confirmation-private.html
+++ b/src/main/resources/templates/pages/confirmation-private.html
@@ -106,32 +106,13 @@
                             </tr>
                             </tbody>
                         </table>
-                        <form action="#" class="row" method="post" th:action="@{/bevestiging-particulier}"
-                              th:object="${privateRegistrationDto}">
-                            <input th:field="*{initials}" type="hidden">
-                            <input th:field="*{firstName}" type="hidden">
-                            <input th:field="*{preposition}" type="hidden">
-                            <input th:field="*{surName}" type="hidden">
-                            <input th:field="*{dateOfBirth}" type="hidden">
-                            <input th:field="*{socialSecurityNumber}" type="hidden">
-                            <input th:field="*{email}" type="hidden">
-                            <input th:field="*{phone}" type="hidden">
-                            <input th:field="*{postalCode}" type="hidden">
-                            <input th:field="*{homeNumber}" type="hidden">
-                            <input th:field="*{street}" type="hidden">
-                            <input th:field="*{residence}" type="hidden">
-                            <input th:field="*{userName}" type="hidden">
-                            <input th:field="*{password}" type="hidden">
-                            <input th:field="*{passwordConfirmation}" type="hidden">
-                            <input class="btn btn-primary btn-lg btn-block mt-0 ml-3 mb-4 mr-2 pt-3 pb-3 " type="submit"
-                                   value="Registratie voltooien"/>
-                        </form>
+                        <form th:replace="fragments/form :: form-confirmation-private-hidden"></form>
                     </div>
                 </div>
                 <div class="pt-5 pb-5" id="accordion">
                     <div aria-labelledby="headingOne" class="collapse show" data-parent="#accordion"
                          id="collapseOne">
-                        <form th:replace="fragments/forms :: form-registration-private"></form>
+                        <form th:replace="fragments/form :: form-registration-private"></form>
                     </div>
                 </div>
             </div>
